[project]
name = "langchain-naver-community"
version = "0.1.1"
authors = [{ name = "Changyong Um", email = "eum6211@gmail.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "langchain>=0.0.27",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
license-files = []

[tool.uv]
package = true

[project.urls]
Repository = "https://github.com/e7217/langchain-naver-community"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

