[project]
name = "langchain-naver-community"
version = "0.1.1"
authors = [{ name = "Changyong Um", email = "eum6211@gmail.com" }]
description = "Add your description here"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "langchain>=0.0.27",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build --sdist --wheel ."
commit_parser = "conventional"
tag_format = "v{version}"
upload_to_vcs_release = true
allow_zero_version = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix"]

[tool.semantic_release.remote]
type = "github"

[tool.uv]
package = true

[project.urls]
Repository = "https://github.com/e7217/langchain-naver-community"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

