[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "langchain-naver-community"
authors = [{ name = "Changyong Um", email = "eum6211@gmail.com" }]
description = "Add your description here"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "langchain>=0.0.27",
    "pydantic>=2.10.6",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v(?P<version>.+)" 

[tool.hatch.build.targets.wheel]
sources = ["langchain-naver-community"]

[tool.uv]
package = true

[project.urls]
Repository = "https://github.com/e7217/langchain-naver-community"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

